# goals

./: .gitignore  README.md  build.sh  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: broadcaster.py  database.py  main.py  models.py  time_utils.py
backend/app/routers/: events.py  goals.py  logs.py  settings.py  weeks.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: DatePicker.jsx  GoalForm.jsx  GoalRow.jsx  Toast.jsx  WeekStrip.jsx  WeekSummary.jsx
frontend/src/hooks/: useEvents.js  useGoals.js  useLogs.js  useSettings.js
frontend/src/pages/: GoalsPage.jsx  TodayPage.jsx
